test/visibility/import/no-param-import.good
no-param-import.chpl:4: error: import must name a module ('p' not a module)
