test/visibility/import/no-param-import.chpl
module Foo {
  param p: int = 3;

  import p;
}
